// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with any date and any time (empty time set) 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "#A5A5A5",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "paddingBottom": 12,
        "paddingTop": 16,
      }
    }
    testID="filter-header"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#545454",
            "borderRadius": 4,
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
            "marginLeft": 8,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          type="h2"
        >
          I'm interested in...
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#545454",
            "borderRadius": 25,
            "height": 52,
            "justifyContent": "flex-end",
            "marginHorizontal": 12,
            "width": 52,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Bold",
              "fontSize": 14,
              "paddingBottom": 6,
            }
          }
          type="text"
        >
          Map
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 8,
        }
      }
    >
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Any day"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Any time"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Filters"
      />
    </View>
  </View>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with any date and any time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "#A5A5A5",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "paddingBottom": 12,
        "paddingTop": 16,
      }
    }
    testID="filter-header"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#545454",
            "borderRadius": 4,
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
            "marginLeft": 8,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          type="h2"
        >
          I'm interested in...
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#545454",
            "borderRadius": 25,
            "height": 52,
            "justifyContent": "flex-end",
            "marginHorizontal": 12,
            "width": 52,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Bold",
              "fontSize": 14,
              "paddingBottom": 6,
            }
          }
          type="text"
        >
          Map
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 8,
        }
      }
    >
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Any day"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Any time"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Filters"
      />
    </View>
  </View>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with date range and two times 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "#A5A5A5",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "paddingBottom": 12,
        "paddingTop": 16,
      }
    }
    testID="filter-header"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#545454",
            "borderRadius": 4,
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
            "marginLeft": 8,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          type="h2"
        >
          I'm interested in...
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#545454",
            "borderRadius": 25,
            "height": 52,
            "justifyContent": "flex-end",
            "marginHorizontal": 12,
            "width": 52,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Bold",
              "fontSize": 14,
              "paddingBottom": 6,
            }
          }
          type="text"
        >
          Map
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 8,
        }
      }
    >
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="2 Feb - 3 Feb"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Morning, Afternoon"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Filters"
      />
    </View>
  </View>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with single date and single time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "#A5A5A5",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "paddingBottom": 12,
        "paddingTop": 16,
      }
    }
    testID="filter-header"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#545454",
            "borderRadius": 4,
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
            "marginLeft": 8,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          type="h2"
        >
          I'm interested in...
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#545454",
            "borderRadius": 25,
            "height": 52,
            "justifyContent": "flex-end",
            "marginHorizontal": 12,
            "width": 52,
          }
        }
      >
        <Text
          markdown={false}
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Poppins-Bold",
              "fontSize": 14,
              "paddingBottom": 6,
            }
          }
          type="text"
        >
          Map
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginTop": 8,
        }
      }
    >
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="2 Feb"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Afternoon"
      />
      <FilterHeaderButton
        onPress={[Function]}
        style={
          Object {
            "marginLeft": 8,
          }
        }
        text="Filters"
      />
    </View>
  </View>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;
